grammar/grammar.txt
PROGRAM: COMPSTMT
COMPSTMT: STMTS TERMINALS
STMTS: (STMT)*
TERMINALS: (TERMINAL)*
TERMINAL: ';' | '\n'

STMT: EXPR STMT'

STMT': if EXPR STMT'
    | while EXPR STMT'
    | unless EXPR STMT'
    | until EXPR STMT'
    | rescue STMT STMT'
    | null

EXPR: ARG | CALL

CALL: FNAME CALL_ARGS

FNAME: (tIDENTIFIER | tCONSTANT | tFID)

CALL_ARGS: ARGS | ARGS [',' ASSOCS]

ASSOCS: ASSOC (',' ASSOC)*

ASSOC: ARG '=>' ARG

ARG: LHS '=' ARG ARG'
   | '+' ARG ARG'
   | '-' ARG'
   | '!' ARG'
   | '~' ARG'
   | defined? ARG ARG'
   | PRIMARY ARG'

ARG': '..' ARG ARG'
    | '...' ARG ARG'
    | '+' ARG ARG'
    | '-' ARG ARG'
    | ... etc. ...
    | null

LHS: VARNAME
   | PRIMARY '[' [ARGS] ']'
   | PRIMARY '.' identifier

ARGS: ARG (',' ARG)*

VARNAME: '@'identifier
         | '@@'identifier
         | identifier

PRIMARY: LITERAL
        | VARIABLE
        | '(' COMPSTMT ')'
        | '::' identifier
        | class constant [`<' constant] COMPSTMT end
        | begin COMPSTMT end
        | 'def' FNAME ARGDECL COMPSTMT 'end'

ARGDECL: '(' ARGLIST ')' | ARGLIST TERMINAL

ARGLIST: identifier (',' identifier)*

LITERAL: numeric
